--- a/notebooks/Sorting.ipynb
+++ b/notebooks/Sorting.ipynb
@@ -90,6 +90,65 @@
     "bubble_sort(nums)\n",
     "print(\"POST SORT: {0}\".format(nums))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge Sort\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_sort(items):\n",
+    "  if len(items) <= 1:\n",
+    "    return items\n",
+    "\n",
+    "  middle_index = len(items) // 2\n",
+    "  left_split = items[:middle_index]\n",
+    "  right_split = items[middle_index:]\n",
+    "\n",
+    "  left_sorted = merge_sort(left_split)\n",
+    "  right_sorted = merge_sort(right_split)\n",
+    "\n",
+    "  return merge(left_sorted, right_sorted)\n",
+    "\n",
+    "def merge(left, right):\n",
+    "  result = []\n",
+    "\n",
+    "  while (left and right):\n",
+    "    if left[0] < right[0]:\n",
+    "      result.append(left[0])\n",
+    "      left.pop(0)\n",
+    "    else:\n",
+    "      result.append(right[0])\n",
+    "      right.pop(0)\n",
+    "\n",
+    "  if left:\n",
+    "    result += left\n",
+    "  if right:\n",
+    "    result += right\n",
+    "\n",
+    "  return result\n",
+    "\n",
+    "unordered_list1 = [356, 746, 264, 569, 949, 895, 125, 455]\n",
+    "unordered_list2 = [787, 677, 391, 318, 543, 717, 180, 113, 795, 19, 202, 534, 201, 370, 276, 975, 403, 624, 770, 595, 571, 268, 373]\n",
+    "unordered_list3 = [860, 380, 151, 585, 743, 542, 147, 820, 439, 865, 924, 387]\n",
+    "\n",
+    "print(merge_sort(unordered_list1))\n",
+    "ordered_list1 = merge_sort(unordered_list1)\n",
+    "ordered_list2= merge_sort(unordered_list2)\n",
+    "ordered_list3= merge_sort(unordered_list3)\n",
+    "print(ordered_list1)\n",
+    "print(ordered_list2)\n",
+    "print(ordered_list3)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
